--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -55,6 +55,7 @@
       <view wx:for="{{order_nav}}" wx:key="{{index}}" class='nav_list' bindtap="go_order" data-id="{{item.id}}">
         <view class='nav_img'>
           <image src='{{item.src}}'></image>
+          <view class="nav_view" wx:if="{{item.show == true}}">0</view>
         </view>
         <view>{{item.text}}</view>
       </view>
