--- a/pages/buy/buy.wxss
+++ b/pages/buy/buy.wxss
@@ -285,7 +285,7 @@ margin:20rpx auto;
   width: 100%;
   height: 100rpx;
   position: fixed;
-  bottom: 0;
+  bottom: 48px;
   left: 0;
   margin-bottom: 0;
   background-color: #F2F2F1;
