--- a/pages/buy/buy.wxss
+++ b/pages/buy/buy.wxss
@@ -414,17 +414,18 @@ text-align: center;
   width: 60rpx;
   height: 30rpx;
   margin-right: 10rpx;
-  margin-bottom: 7rpx;
+  margin-bottom: 11rpx;
   vertical-align: middle;
 }
 .texts {
   color:#669900;
   border:solid 1px #669900;
   border-radius:6rpx;
-  font-size:24rpx;
+  font-size:22rpx;
   text-align:center;
   margin-right: 10rpx;
   margin-bottom: 8rpx;
   display: inline-block;
   vertical-align: middle;
+  line-height: 29rpx;
 } 
