--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -134,7 +134,7 @@ background-size:80%;
   display: flex;
   align-items: center;
   justify-content: center;
-
+  border:1rpx solid #ff5;
 }
 .order_content{
   width: 94%;
