--- a/pages/buy/buy.wxss
+++ b/pages/buy/buy.wxss
@@ -429,3 +429,12 @@ text-align: center;
   vertical-align: middle;
   line-height: 29rpx;
 } 
+.limit_style {
+  color: rgb(161, 161, 177);
+  font-size: 24rpx;
+  padding-top:12rpx;
+  margin-left: 8rpx;
+}
+.text_red{
+  padding-top:10rpx;
+}
