--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -130,6 +130,7 @@
 				<view class='box_list_four'>
 					<view class="flex">
 						<view class="courier">顺丰：799394904004040</view>
+						<view class="logistics" bindtap="to_logistics">查看物流></view>
 						<view class='remind_delivery cancel type_button' bindtap="confirm_receipt" data-id="{{item.parts_order_number}}">确认收货</view>
 					</view>
 				</view>
