--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -106,11 +106,13 @@
                     data-inTime="{{item.pay_time}}" 
                     data-outTime="{{item.end_time}}"
                     data-price="{{item.unit_price}}"
+                    data-id="{{item.id}}"
                     bind:tap="showRenewPop" wx:if="{{item.limit_time == 2}}">续费</button>
                   <button type="primary" class="renew" 
                     data-inTime="{{item.pay_time}}" 
                     data-outTime="{{item.end_time}}"
                     data-price="{{item.unit_price}}"
+                    data-id="{{item.id}}"
                     bind:tap="showRenewPop">续费</button>
                 </view>
               </view>
@@ -162,7 +164,7 @@
               <image src="{{url}}{{item.goods_show_image}}" bindtap="support"  data-id="{{item.id}}" />
             </view>
             <view class="right-project-info">
-              <view class="project-name hid-txt-one">放假快乐我前几天离开王经理开关机阿叔定理开发工具萨拉克</view>
+              <view class="project-name hid-txt-one">{{item.project_name}}</view>
               <wxzx-progress class="wxzx-progress" percent="{{item.centum>100?100:item.centum}}" show-info border-radius="4px" width="300" stroke-width='12' radius='6' active-color="#ff9600,#ff1000,#ff0000"></wxzx-progress>
               <text class="percent-num">{{item.centum}}%</text>
               <view class="project-people">
@@ -215,7 +217,7 @@
     <view class="renew-cost">
       续费费用<text>{{savePrice}}元</text>
     </view>
-    <view class="renew-btn">确认续费</view>
+    <view class="renew-btn" bind:tap="bindRenewEvent">确认续费</view>
   </view>
 </view>
 <!-- <block wx:if="{{foot_is==2}}">
