--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -47,7 +47,7 @@
   </view>
   <view class='home_banner'>
   <!-- interval="{{interval}}" -->
-    <swiper  duration="{{duration}}" indicator-dots="{{indicatorDots}}"  circular="{{circular}}"  autoplay="{{autoplay}}">
+    <swiper  duration="{{duration}}" indicator-dots="{{indicatorDots}}"  circular="{{circular}}"  autoplay="{{autoplay}}" interval='{{interval}}'>
       <swiper-item wx:if="{{isvideo}}">
         <video id="myVideo" src="{{goods.video_link}}" style="width:100%;height:100%;"  autoplay="true" bindended="overVideo"></video>
       </swiper-item>
