--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -25,8 +25,7 @@
           <view class='spec_title'>选择规格</view>
           <view class='spec_content_all'>
             <view class='spec_content' wx:for="{{goods.goods_standard}}">
-              <view class="spec_content_text {{item.id==id? 'on' : ''}}" bindtap="labelItemTap" data-current="{{item.id}}" data-price="{{item.price}}"
-               data-stock="{{item.stock}}" data-images="{{item.images}}" data-value="{{item.name}}" data-save="{{item.save}}" wx:if="{{item.stock != 0}}">
+              <view class="spec_content_text {{item.id==id? 'on' : ''}}" bindtap="labelItemTap" data-current="{{item.id}}" data-price="{{item.price}}" data-stock="{{item.stock}}" data-images="{{item.images}}" data-value="{{item.name}}" data-save="{{item.save}}" wx:if="{{item.stock != 0}}">
                 {{item.name}}
               </view>
             </view>
@@ -46,10 +45,10 @@
     </view>
   </view>
   <view class='home_banner'>
-  <!-- interval="{{interval}}" -->
-    <swiper  duration="{{duration}}" indicator-dots="{{indicatorDots}}"  circular="{{circular}}"  autoplay="{{autoplay}}" interval='{{interval}}'>
+    <!-- interval="{{interval}}" -->
+    <swiper duration="{{duration}}" indicator-dots="{{indicatorDots}}" circular="{{circular}}" autoplay="{{autoplay}}" interval='{{interval}}'>
       <swiper-item wx:if="{{isvideo}}">
-        <video id="myVideo" src="{{goods.video_link}}" style="width:100%;height:100%;"  autoplay="true" bindended="overVideo"></video>
+        <video id="myVideo" src="{{goods.video_link}}" style="width:100%;height:100%;" autoplay="true" bindended="overVideo"></video>
       </swiper-item>
       <block wx:for="{{image}}" wx:key="{{index}}">
         <swiper-item class='swiper-item'>
@@ -74,26 +73,27 @@
         <view>{{clock}}</view>
       </view>
     </view>
-
   </view>
   <view class='goods_cont'>
     <!-- <text class='texts'>可存</text> -->
-    <view class='good_name'>
-      {{goods.goods_name}}
-    </view>
-    <view class='selling-point' >
+    <view class='good_name'>{{goods.goods_name}}</view>
+    <view class='selling-point'>
       <image class="image_bq" style="vertical-align: middle;" src="http://ptcb077mt.bkt.clouddn.com/kecun.png" wx:if="{{kc == 1}}"></image>
       <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/hot.png" wx:if="{{hot == 1}}"></image>
       <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/chuxiao.png" wx:if="{{cx == 1}}"></image>
       <image class="image_bq" src="http://ptcb077mt.bkt.clouddn.com/qingchang.png" wx:if="{{qc == 1}}"></image>
-      <view class="texts" wx:for="{{goods.goods_sign}}" wx:key="{{index}}">{{item.text}}</view>{{goods.goods_selling}}</view>
+      <view class="texts" wx:for="{{goods.goods_sign}}" wx:key="{{index}}">{{item.text}}</view>
+      {{goods.goods_selling}}
+    </view>
     <view class='price_cont'>
       <view style="display:flex; align-items:flex-end;margin-bottom:-15px">
         <view class='level_images' style='margin-bottom:9.5rpx;'>
           <image src='{{url}}{{member_grade_img}}'></image>
         </view>
         <view wx:if="{{goods.goods_standard==0}}">
-          <view class='sale'>￥{{goods.limit_condition == '1'?goods.limit_price:goods.goods_new_money}}/{{goods.unit}}</view>
+          <view class='sale'>
+            ￥{{goods.limit_condition == '1'?goods.limit_price:goods.goods_new_money}}/{{goods.unit}}
+          </view>
         </view>
         <view wx:else>
           <view class='sale'>￥{{goods.min_price}}/{{goods.unit}}</view>
@@ -113,13 +113,11 @@
       <view class='inventory'>库存{{goods.goods_repertory}}{{goods.unit}}</view>
       <view class='sales'>销量{{goods.goods_volume}}{{goods.unit}}</view>
     </view>
-
     <view class='other_info'>
       <view class='other_info_list' wx:for="{{goods.server}}" wx:key="{{index}}">
         <image class="other_info_img" src="http://ptcb077mt.bkt.clouddn.com/u2151.png" mode="widthFix"></image>
         <text class="other_info_text">{{item.text}}</text>
       </view>
-
     </view>
   </view>
   <view class='ser-type' bindtap='showFlag' wx:if="{{goods.goods_standard!=0}}">
@@ -156,24 +154,22 @@
             </view>
             <view class='comment_right'>
               <view class='comment_name'>瑞川</view>
-              <view class='repay_content'>
-
-              </view>
+              <view class='repay_content'>上课时间看见爱上看见谁看你可能是快乐那看来是快乐是哪里开始你离开是哪里难受了呢</view>
               <view class='comment_img_all'>
                 <view class='comment_imgs'>
-                  <image src='img/u2811.png'></image>
+                  <image src='http://ptcb077mt.bkt.clouddn.com/photo.png'></image>
                 </view>
                 <view class='comment_imgs'>
-                  <image src='img/u2811.png'></image>
+                  <image src='http://ptcb077mt.bkt.clouddn.com/photo.png'></image>
                 </view>
                 <view class='comment_imgs'>
-                  <image src='img/u2811.png'></image>
+                  <image src='http://ptcb077mt.bkt.clouddn.com/photo.png'></image>
                 </view>
               </view>
               <view class='time'>2018-10-06</view>
               <view class='repays_content'>
                 <text class='repay_content_title'>官方回复：</text>
-                <text></text>
+                <text>牛逼</text>
               </view>
             </view>
           </view>
