--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -95,10 +95,11 @@
 						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
 					</view>
 				</view>
-				<view class='box_list_four'>
-					<view>
-						<view class='remind_delivery cancel type_button' bindtap="tip_order" data-id="{{item.parts_order_number}}">提醒发货</view>
-					</view>
+				<view wx:if="{{item.order_type==3}}" class='box_list_four'>
+					<view class='remind_delivery cancel type_button' bindtap="tip_order" data-id="{{item.parts_order_number}}">已入仓</view>
+				</view>
+				<view wx:if="{{item.order_type==1 || item.order_type==2}}" class='box_list_four'>
+					<view class='remind_delivery cancel type_button' bindtap="tip_order" data-id="{{item.parts_order_number}}">提醒发货</view>
 				</view>
 			</view>
 			<view wx:elif="{{item.status==4 || item.status==5}}">
