--- a/pages/settlement/settlement.wxss
+++ b/pages/settlement/settlement.wxss
@@ -222,7 +222,9 @@
 }
 
 .quantity-p {
-  font-size: 34rpx;
+  font-size: 28rpx;
+  margin-left: 75rpx;
+  margin-top: 11rpx;
 }
 
 .order-goods-info {
