--- a/pages/diy/resource/wxParse/wxParse.wxml
+++ b/pages/diy/resource/wxParse/wxParse.wxml
@@ -353,7 +353,7 @@
         </view>
         <template is="WxParseBr" data wx:elif="{{item.tag=='br'}}"></template>
         <view class="{{item.classStr}} wxParse-{{item.tag}}" style="{{item.styleStr}}" wx:elif="{{item.tagType=='block'}}">
-            <template is="wxParse1" data="{{item:item}}" wx:for="{{item.nodes}}"></template>
+            <template is="wxParse1" data="{{item:item}}" wx:for="{{item.nodes}}" wx:key="{{index}}"></template>
         </view>
         <view class="{{item.classStr}} wxParse-{{item.tag}} wxParse-{{item.tagType}}" style="{{item.styleStr}}" wx:else>
             <template is="wxParse1" data="{{item:item}}" wx:for="{{item.nodes}}"></template>
@@ -362,7 +362,7 @@
     <template is="WxEmojiView" data="{{item:item}}" wx:elif="{{item.node=='text'}}"></template>
 </template>
 <template name="wxParse">
-    <template is="wxParse0" data="{{item:item}}" wx:for="{{wxParseData}}"></template>
+    <template is="wxParse0" data="{{item:item}}" wx:for="{{wxParseData}}" wx:key="{{index}}"></template>
 </template>
 <template name="WxParseBr">
     <text>
@@ -370,7 +370,7 @@
 </template>
 <template name="WxEmojiView">
     <view class="WxEmojiView wxParse-inline" style="{{item.styleStr}}">
-        <block wx:for="{{item.textArray}}">
+        <block wx:for="{{item.textArray}}" wx:key="{{index}}">
             <block wx:if="{{item.node=='text'}}">{{item.text}}</block>
             <image class="wxEmoji" src="{{item.baseSrc}}{{item.text}}" wx:elif="{{item.node=='element'}}"></image>
         </block>
